--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "author": "Ekitcho <mynameiskeo@gmail.com> (https://ekblogi-note.vercel.app/)",
   "license": "MIT",
   "devDependencies": {
+    "@nuxtjs/moment": "^1.6.1",
     "eslint": "^8.17.0",
     "nuxt": "3.0.0-rc.11",
     "typescript": "^4.7.3"
