modified:   README.md 	modified:   components/PostListItem.vue 	modified:   components/content/ProseA.vue 	modified:   content/article/example/1.example-article-en.md 	modified:   nuxt.config.ts 	modified:   package-lock.json 	modified:   package.json 	modified:   pages/article/[...slug].vue 	modified:   pages/fondations-transdisciplinaires.vue 	modified:   pages/index.vue 	modified:   utils/fileType.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bloginote",
+  "name": "ekbloginote",
   "version": "1.0.1",
   "type": "module",
   "description": "Personal Knowledge base, archive and blog based on A Nuxt theme",
